fix: null ptr